# meta-agents-research-environments

./: CLAUDE.md  HOW_TO_USE.md  README.md  requirements-dev.txt  requirements-gui.txt  requirements.txt
gaia2-cli/cli/: Dockerfile  pyproject.toml  test-daemon-docker.sh
gaia2-cli/cli/gaia2_cli/: app_registry.py  init_cmd.py  shared.py
gaia2-cli/cli/gaia2_cli/apps/: apartment.py  cab.py  calendar.py  chats.py  city.py  contacts.py  email.py  files.py  messages.py  shopping.py
gaia2-cli/cli/gaia2_cli/daemon/: __init__.py  channel.py  cli_executor.py  eventd.py  replay.py
gaia2-cli/cli/gaia2_cli/judge/: __init__.py  (+1 more)
gaia2-cli/cli/tests/: conftest.py  test_apartment.py  test_app_registry.py  test_cab.py  test_calendar.py  test_city.py  test_contacts.py  test_email.py  test_eventd.py  test_files.py  test_init.py  test_judge.py  test_judge_engine.py  test_judge_time.py  test_loader.py  test_messaging.py  test_shared.py  test_shopping.py  test_time_scenario.py
gaia2-cli/core/: pyproject.toml
gaia2-cli/core/gaia2_core/: __init__.py  loader.py  trace_viewer.py  types.py
gaia2-cli/runner/: README.md  TRACE_FORMAT.md  pyproject.toml
gaia2-cli/runner/examples/: hermes_google_gaia2_pass1.toml  hermes_gpt54_gaia2_pass1.toml  hermes_opus_gaia2_pass1.toml  hermes_sonnet_gaia2_pass1.toml  openclaw_google_gaia2_pass1.toml  openclaw_gpt54_gaia2_pass1.toml  openclaw_opus_gaia2_pass1.toml  openclaw_sonnet_gaia2_pass1.toml  quickstart_hermes.toml  quickstart_openclaw.toml  template_hermes_openai_compat.toml  template_openclaw_openai_compat.toml
gaia2-cli/runner/gaia2_runner/: cli.py  config.py  container_env.py  envfile.py  events_converter.py  hf_dataset.py  launcher.py  runner.py  serve.py  trace_parser.py  trace_viewer.py
gaia2-cli/runner/tests/: __init__.py  test_cli_judge_config.py  test_cli_ports.py  test_cli_recursive.py  test_container_env.py  test_envfile.py  test_events_converter.py  test_launcher.py  test_pass_at_reporting.py  test_run_config.py  test_runner.py  test_serve.py  test_trace_parser.py  test_trace_viewer.py
(+87 files in other folders)
