[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia2-core"
version = "0.1.0"
description = "Shared core types, judge, and loader for Gaia2 evaluation."
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0", "jinja2>=3.0"]

[tool.setuptools.packages.find]
include = ["gaia2_core*"]
