[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia2-runner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "gaia2-cli[judge]",
    "python-dotenv>=1.0",
    "tqdm>=4.60",
    "datasets>=3.0",
]

[project.scripts]
gaia2-runner = "gaia2_runner.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["gaia2_runner*"]

[tool.uv.sources]
gaia2-cli = { path = "../cli", editable = true }
